@@ -11,10 +11,10 @@ Feature: Composition
   @javascript
   Scenario: The components in the StaticComposite should both work properly
     Given I am on the StaticComposite test page
-    When I press "Call server" within "#static_aggregator__center_panel"
+    When I press "Call server" within "#static_composite__center_panel"
     Then I should see "All quiet here on the server"
     And I should not see "All quiet here on the server, shiny weather"
     
-    When I press "Call server" within "#static_aggregator__west_panel"
+    When I press "Call server" within "#static_composite__west_panel"
     Then I should see "All quiet here on the server, shiny weather"
   
