@@ -2,7 +2,7 @@ require 'active_support'
 require 'netzke/component/javascript'
 require 'netzke/component/stylesheets'
 require 'netzke/component/api'
-require 'netzke/component/aggregation'
+require 'netzke/component/composition'
 require 'netzke/component/configuration'
 require 'netzke/component/persistence'
 require 'netzke/component/embedding'
