@@ -5,6 +5,9 @@
   * js_extend_properties renamed to js_properties
   * ext_config config level is removed; put all that configuration in the top level
   * all actions should now be wrapped up in the js_action method
+  * +late_aggregatee+ option becomes +lazy_loading+
+  * aggregatee are now called components
+  * Widget is now called Component
 
 * New
   * Use the +ext+ helper in the views to embed any (pure) Ext component into a view.
